Revision history for Perl extension Tree::Simple.

1.23  Sat Nov  9 10:43:00 2013
	- No code changes.
	- Accept spelling corrections from the Debian Perl Group, with thanx. See RT#90171.
		Note: The change to lib/Tree/Simple/Visitor.pm had already been made.

1.22  Mon Sep 30 08:35:00 2013
	- Metadata fixes in Build.PL and correct bugtracker queue in Makefile.PL. Thanx to dsteinbrunner (via github).

1.21  Thu Sep 26 13:08:00 2013
	- Fix syntax error in Makefile.PL.

1.20  Thu Sep 26 11:16:00 2013
	- Merge source from https://github.com/stevan/tree-simple.
	- Close github issues.
	- Add bugtracker and license to Build.PL and Makefile.PL.

1.19  Mon Sep 23 08:26:00 2013
	- Maintenance now by Ron Savage.
	- Rectify datestamp format in this file.
	- Add Changelog.ini.
	- Make Simple.pm and Visitor.pm have the same version #.
	- Reformat Build.PL and Makefile.PL.
	- Move t/pod* into xt/author/.
	- Minor doc patches.
	- Add t/17_Tree_Simple_width_test.t. This code was attached to RT#40407, to demonstrate a bug in keeping a
		running total of the width (leaf count) of a tree during node additions to leaves.
		Thanx to David Cryer for the test code and patch.
	- Add t/21_Tree_Simple_Visitor_test.t. This code was attached to RT#30032, to demonstrate a bug in including
		the root in a traversal after calling $visitor -> includeTruck(1).
	- RT#30032: Adopt patch from Moses Amaro. With thanx.
	- RT#38607: Reject. Suppressing deep recursion warnings should not normally be done. Sub-class!
	- RT#40407: Adopt patch from David Cryer. With thanx.
	- RT#84797: Reject. Changing the return value of setUID could break any amount of code.

1.18  Sun Nov 11 12:00:00 2007
    - fixing version string to not choke on 5.10
      (RT #29746)

1.17  Mon Oct 23 12:00:00 2006
    - make loading of Scalar::Util::weaken, completely
      optional
    - added a $post_func optional arg to &traverse. Thanks
      to Mark Lawrence for the patch, docs and tests :)

1.16  Mon Feb  6 12:00:00 2006