@@ -9,6 +9,7 @@ Comments= <<EOT
 - No code changes.
 - Accept spelling corrections from the Debian Perl Group, with thanx. See RT#90171.
 Note: The change to lib/Tree/Simple/Visitor.pm had already been made.
+- Add t/version.t, which uses Test::Version, to cross-check version #s.
 EOT
 
 [V 1.22]
