@@ -17,7 +17,8 @@
       "build" : {
          "requires" : {
             "Test::Exception" : "0.15",
-            "Test::More" : "0.47"
+            "Test::More" : "0.47",
+            "Test::Version" : "1.002003"
          }
       },
       "configure" : {
