@@ -1,0 +1,11 @@
+use strict;
+use warnings;
+
+use Test::More;
+use Test::Version 'version_all_ok', {is_strict => 1};
+
+# ------------------------------------------------
+
+version_all_ok;
+
+done_testing;
