@@ -4,6 +4,7 @@ Revision history for Perl extension Tree::Simple.
 	- No code changes.
 	- Accept spelling corrections from the Debian Perl Group, with thanx. See RT#90171.
 		Note: The change to lib/Tree/Simple/Visitor.pm had already been made.
+	- Add t/version.t, which uses Test::Version, to cross-check version #s.
 
 1.22  Mon Sep 30 08:35:00 2013
 	- Metadata fixes in Build.PL and correct bugtracker queue in Makefile.PL. Thanx to dsteinbrunner (via github).
